--- a/.github/workflows/go-build.yaml
+++ b/.github/workflows/go-build.yaml
@@ -2,47 +2,43 @@
 # Do not edit. This file was generated via the "workflow" command line tool.
 # More information about the tool can be found at github.com/xh3b4sd/workflow.
 #
-#     workflow create golang --binary=false
+#     workflow create golang
 #
 
-name: "go-build"
+name: "Go Build"
 
 on: "push"
+
+permissions:
+  contents: read
 
 jobs:
   go-build:
     runs-on: "ubuntu-latest"
     steps:
       - name: "Setup Git Project"
-        uses: "actions/checkout@v5"
+        uses: "actions/checkout@v6"
 
       - name: "Setup Go Env"
         uses: "actions/setup-go@v6"
         with:
           cache: true
-          go-version: "1.24.0"
+          go-version: "1.25.1"
 
       - name: "Check Go Dependencies"
         run: |
           go mod tidy
           git diff --exit-code
 
-      - name: "Run Go Build"
-        env:
-          CGO_ENABLED: "0"
-        run: |
-          go build ./...
-
-      - name: "Check Go Tests"
-        run: |
-          go test ./... -race
+      - name: "Check Go Linters"
+        uses: "golangci/golangci-lint-action@v9"
+        with:
+          version: "latest"
 
       - name: "Check Go Formatting"
         run: |
           test -z $(gofmt -l -s .)
 
-      - name: "Check Go Linters"
+      - name: "Check Go Tests"
         run: |
-          curl -LOs https://github.com/golangci/golangci-lint/releases/download/v1.64.5/golangci-lint-1.64.5-linux-amd64.tar.gz
-          tar -xzf golangci-lint-1.64.5-linux-amd64.tar.gz
-          ./golangci-lint-1.64.5-linux-amd64/golangci-lint run
+          go test ./... -race
